--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,19 @@ body {
   font-family: 'Poppins', 'sans-serif';
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border-width: 0;
+  
+}
+
 .container {
   width: min(90vw, 800px );
   margin: auto;
@@ -27,6 +40,19 @@ h2 {
   color: var(--dark-blue);
 
   font-weight: normal;
+}
+/* Links & Buttons ============================ */
+a {
+  color: #49aa26;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3dd705;
+}
+.button.new {
+  display: inline-;
+  margin-bottom: .8rem;
 }
 
 /* Header ============================ */
@@ -65,6 +91,11 @@ header {
   font-weight: normal;
   font-size: 1rem;
 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+
 }
 
 .card p {
@@ -90,6 +121,12 @@ table thead tr th:first-child,
 table tbody tr td:first-child{
   border-radius: 0.25rem 0 0 0.25rem;
   
+}
+
+
+table thead tr th:last-child,
+table tbody tr td:last-child{
+  border-radius: 0rem 0.25rem 0.25rem 0;
 }
 
 table thead th {
