--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,25 @@
-/* GLOBAL ============================ */
-
+/* Global ===================== */
 :root {
   --dark-blue: #363f5f;
-  --green: #49aa26;
+  --green: #49AA26;
   --light-green: #3dd705;
-  --red:#e92929;
+  --red: #e92929;
+
 }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
+
 html {
-  font-size: 93.75%;
+  font-size: 93.75%; /* 15px */
 }
 
 body {
   background: #f0f2f5;
-  font-family: 'Poppins', 'sans-serif';
+  font-family:'Poppins', sans-serif
 }
 
 .sr-only {
@@ -28,18 +29,17 @@ body {
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0,0,0,0);
+  clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
-  
 }
 
 .container {
-  width: min(90vw, 800px );
+  width: min(90vw, 800px);
   margin: auto;
 }
 
-/* Titles ============================ */
+/* Titles ===================== */
 h2 {
   margin-top: 3.2rem;
   margin-bottom: 0.8rem;
@@ -47,9 +47,10 @@ h2 {
 
   font-weight: normal;
 }
-/* Links & Buttons ============================ */
+
+/* Links & Buttons ===================== */
 a {
-  color:var(--green);
+  color: var(--green);
   text-decoration: none;
 }
 
@@ -60,16 +61,21 @@ a:hover {
 button {
   width: 100%;
   height: 50px;
+
   border: none;
-  color:white;
+
+  color: white;
   background: var(--green);
+
   padding: 0;
+
   border-radius: 0.25rem;
+
   cursor: pointer;
 }
 
 button:hover {
-  background:var(--light-green);
+  background: var(--light-green);
 }
 
 .button.new {
@@ -77,56 +83,55 @@ button:hover {
   margin-bottom: .8rem;
 }
 
-button:hover {
-  background: var(--light-green);
-}
-
 .button.cancel {
-color: var(--red);
-border: 2px var(--red) solid;
-border-radius: 0.25rem;
-height: 50px;
-display: flex;
-align-items: center;
-justify-content: center;
-opacity: 0.6;
+  color: var(--red);
+  border: 2px var(--red) solid;
+  border-radius: 0.25rem;
+
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0.6;
 }
 
 .button.cancel:hover {
-  opacity:1
-
+  opacity: 1;
 }
 
-/* Header ============================ */
+/* Header ===================== */
 header {
-  background: #2d4a22;
+  background: #2D4A22;
   padding: 2rem 0 10rem;
   text-align: center;
-
 }
 
 #logo {
   color: #fff;
   font-weight: 100;
-
 }
 
-/* Balance ============================ */
+/* Balance ===================== */
 #balance {
   margin-top: -8rem;
 }
 
 #balance h2 {
-  color: white;
-  margin-top: 0;
+  color:white;
+  margin-top:0;
 }
-/* cards ============================ */
+
+/* Cards ===================== */
 .card {
   background: white;
   padding: 1.5rem 2rem;
   border-radius: 0.25rem;
+
   margin-bottom: 2rem;
-  color:var(--dark-blue)
+
+  color: var(--dark-blue);
 }
 
 .card h3 {
@@ -136,8 +141,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-
 }
 
 .card p {
@@ -149,52 +152,52 @@ header {
 
 .card.total {
   background: var(--green);
-  color:white;
-
+  color: white;
 }
-/* Table ============================ */
+
+/* Table ===================== */
 #transaction {
   display: block;
-  overflow-x:auto;
+  width: 100%;
+  overflow-x: auto;
 }
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
-  color: #969cb3 ;
- 
+  color: #969cb3;
 }
 
-table thead tr th:first-child,
-table tbody tr td:first-child{
+table thead tr th:first-child, 
+table tbody tr td:first-child
+{
   border-radius: 0.25rem 0 0 0.25rem;
-  
 }
 
-
-table thead tr th:last-child,
+table thead tr th:last-child, 
 table tbody tr td:last-child{
-  border-radius: 0rem 0.25rem 0.25rem 0;
+  border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table thead th {
   background: white;
+
   font-weight: normal;
   padding: 1rem 2rem;
-  text-align: left;
 
+  text-align: left;
 }
 
 table tbody tr {
-  opacity: 0.7;
+  opacity: 0.7
 }
-table tr:hover {
-  opacity: 1;
+
+table tbody tr:hover {
+  opacity: 1
 }
 
 table tbody td {
   background:white;
-  padding: 1rem 2 rem ;
-
+  padding: 1rem 2rem;
 }
 
 td.description {
@@ -202,28 +205,31 @@ td.description {
 }
 
 td.income {
-  color:#12a454
+  color: #12a454;
 }
 
 td.expense {
-  color:var(--red)
+  color: #e92929;
 }
 
-/* Modal ============================ */
+/* Modal ===================== */
 .modal-overlay {
   width: 100%;
   height: 100%;
 
   background-color: rgba(0,0,0,0.7);
-  position: fixed;
-  top:0;
 
-  display: flex;
+  position: fixed;
+  top: 0;
+
+  display:flex;
   align-items: center;
   justify-content: center;
 
   opacity: 0;
   visibility: hidden;
+
+  z-index: 999;
 }
 
 .modal-overlay.active {
@@ -232,17 +238,17 @@ td.expense {
 }
 
 .modal {
-  background: #f0f2f5;
+  background: #F0F2f5;
   padding: 2.4rem;
-  width: 90%;
-  max-width: 500px;
-  
+
+  position: relative;
+  z-index: 1;
 }
 
-/* Form ============================ */
+
+/* Form ===================== */
 #form {
   max-width: 500px;
- 
 }
 
 #form h2 {
@@ -252,7 +258,9 @@ td.expense {
 input {
   border: none;
   border-radius: 0.2rem;
+
   padding: 0.8rem;
+
   width: 100%;
 }
 
@@ -260,16 +268,14 @@ input {
   margin-top: 0.8rem;
 }
 
-.input-group small {
+.input-group small{
   opacity: 0.4;
-
 }
 
 .input-group.actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .input-group.actions .button,
@@ -278,24 +284,25 @@ input {
 }
 
 
-/* footer ============================ */
-
+/* Footer ===================== */
 footer {
   text-align: center;
   padding: 4rem 0 2rem;
   color: var(--dark-blue);
+
   opacity: 0.6;
 }
 
-/* Responsive ============================ */
-@media (min-width:800px) {
+
+/* Responsive ===================== */
+@media (min-width: 800px) {
   html {
-    font-size: 87.5%;
-  }
-  #balance {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2rem;
+      font-size: 87.5%;
   }
 
+  #balance {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 2rem;
+  }
 }
